# Openai_Agent_SDK_Work

./: .env  async_agent.py  cmd .md  python_env_note_urdu_english.md  z_2_class.py  z_3_class.py
Q3_Revision/: .env  pyproject.toml  readme_markdwon_santex.md  requirements.txt
Q3_Revision/Agents_file/: Agent_01.py  Agent_02.py  Agent_03_litellm.py  Agent_04_History_or_async.py  Agent_05_Streaming.py  Agent_06_chainlit_streaming.py  Agent_07_1_Function_Tools_chainlit.py  Agent_07_Function_Tools.py  Agent_08_Handoffs_Repo_code.py  Agent_09_Handoff.py  Agent_15_function_tools_question.md
Q3_Revision/Chainlit_file/: chainlit_01.py  chainlit_agent_02.py  chainlit_function_Tools_03.py  chainlit_simple_agent_00.py  chainlit_with_show_history.py
Q3_Revision/src/q3_revision/: __init__.py
Uzair_01_Class/: pyproject.toml
Uzair_01_Class/src/uzair_01_class/: __init__.py  simple_agent.py
Uzair_02_Class/: Topic_00.py  Topic_1.py  Topic_2_sync_vs_async_english.py  Topic_3_sync_vs_async_urdu.md  Topic_4.py  Topic_5_sync_async_streaming_demo.py  Topic_5_sync_async_streaming_explained.md  pyproject.toml
Uzair_02_Class/src/uzair_02_class/: .env  __init__.py  main.py
Uzair_03_Class/: Main.py  Topic_00_Agent.py  Topic_01_chainlit.py  Topic_01_streamlit.py  Topic_02_decorator_examples_urdu.py  Topic_02_decorator_guide_urdu.md  Topic_03_Chainlit_Chat_Lifecycle_Hooks.py  Topic_03_chainlit_chat_lifecycle_urdu.py  pyproject.toml  z) cmd.md
Uzair_03_Class/src/uzair_03_class/: __init__.py
Uzair_04_Class/: Topic_1_Chainlit.py  Topic_2_Agent_openroutre.py  Topic_3_Agent_litellm.py  Topic_4_Agent_Chainlit_History_Streaminig.py  pyproject.toml  z) cmd.md
Uzair_04_Class/src/uzair_04_class/: __init__.py
openai_1_project/: pyproject.toml
openai_1_project/src/openai_1_project/: __init__.py  main.py  simple.py
openai_project_2/: .env  ch_litllm.py  chatbot.py  cmd.md  hello.py  pyproject.toml  syed.py  z_1_class.py
openai_project_2/src/openai_project_2/: __init__.py  simple_agent.py
