[project]
name = "uzair-01-class"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MusadiqUrRahman", email = "syedmusadiq.rahman@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
uzair-01-class = "uzair_01_class:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
